--- a/package.json
+++ b/package.json
@@ -1,10 +1,23 @@
 {
   "name": "js-cheatsheets",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "build:webpack": "NODE_ENV=production webpack --config webpack.config.prod.js",
+    "build": "npm run clean && npm run build:webpack",
+    "test": "NODE_ENV=production mocha './tests/**/*.spec.js' --compilers js:babel-core/register",
+    "start": "node devServer.js",
+    "tunnel": "browser-sync start --proxy localhost:7770 --tunnel wesbos"
+  },
   "dependencies": {},
   "devDependencies": {
     "babel-core": "^6.11.4",
-    "babel-loader": "^6.2.4"
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "chai": "^3.5.0",
+    "express": "^4.14.0",
+    "mocha": "^2.5.3",
+    "webpack": "^1.13.1",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-hot-middleware": "^2.12.2"
   }
 }
