--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "npm run clean && npm run build:webpack",
     "test": "NODE_ENV=production mocha './tests/**/*.spec.js' --compilers js:babel-core/register",
     "start": "node devServer.js",
-    "tunnel": "browser-sync start --proxy localhost:7770 --tunnel wesbos"
+    "tunnel": "browser-sync start --proxy localhost:7770",
+    "jsHint": "gulp jsHint"
   },
   "dependencies": {},
   "devDependencies": {
@@ -15,9 +16,13 @@
     "babel-preset-es2015": "^6.9.0",
     "chai": "^3.5.0",
     "express": "^4.14.0",
+    "gulp": "^3.9.1",
+    "gulp-jshint": "^2.0.1",
+    "jshint-stylish": "^2.2.0",
     "mocha": "^2.5.3",
     "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.12.2"
+    "webpack-hot-middleware": "^2.12.2",
+    "yargs": "^4.8.1"
   }
 }
