--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.14.0",
     "gulp": "^3.9.1",
     "gulp-jshint": "^2.0.1",
+    "jshint": "^2.9.2",
     "jshint-stylish": "^2.2.0",
     "mocha": "^2.5.3",
     "webpack": "^1.13.1",
